# invenio-pidstore-extra

./: .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS.rst  CHANGES.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  SUMMARY.md  _setup.cfg  babel.ini  pyproject.toml  run-tests.sh  setup.py
.tx/: config
invenio_pidstore_extra/: __init__.py  config.py  dnb-sandbox.py  ext.py
invenio_pidstore_extra/providers/: __init__.py  dnb.py
invenio_pidstore_extra/providers/urn/: __init__.py  errors.py  request.py  rest.py
invenio_pidstore_extra/services/: __init__.py
invenio_pidstore_extra/services/components/: __init__.py  pids.py
tests/: conftest.py  pytest.ini  test_invenio_pidstore_extra.py  test_provider_rest.py  test_urn_provider.py
