# -*- coding: utf-8 -*-
#
# Copyright (C) 2025 University of Münster.
#
# invenio-pidstore-extra is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[build-system]
requires = ["hatchling", "babel>=2.16.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "invenio_pidstore_extra/__init__.py"

[tool.hatch.metadata]
readme = { paths = ["README.rst", "CHANGES.rst"], content-type = "text/x-rst" }

[tool.hatch.build]
include = ["invenio_pidstore_extra/**/*"]

[[tool.uv.index]]
name = "gitlab"
url = "https://zivgitlab.uni-muenster.de/api/v4/groups/12961/-/packages/pypi/simple"
publish-url = "https://zivgitlab.uni-muenster.de/api/v4/groups/12961/packages/pypi/"
authenticate = "always"
explicit = true

[project]
name = "invenio_pidstore_extra"
dynamic = ["version", "readme"]
description = "Module that adds URN minting by DNB epicur service."
keywords = ["invenio", "rdm", "urn", "dnb"]
license = { text = "MIT" }
authors = [{ name = "University of Münster", email = "forschungsdaten@uni-muenster.de" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]
urls = { Homepage = "https://github.com/ulbmuenster/invenio-pidstore-extra" }
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "arrow>=1.3.0",
    "idutils>=1.4.2",
    "invenio-pidstore>=2.0.0",
    "invenio-rdm-records>=17.0.2",
    "invenio-search>=3.0.0",
    "opensearch-dsl>=2.1.0",
]

[project.optional-dependencies]
tests = [
    "check-manifest",
    "pytest==8.3.5",
    "invenio-app>=2.1.0",
    "pytest-black-ng>=0.4.0",
    "pytest-cov==6.1.1",
    "pytest-docstyle==2.0.1",
    "pytest-env==1.1.5",
    "pytest-invenio>=3.3.0",
    "pytest-isort==4.0.0",
    "pytest-mock>=3.12.0",
    "Sphinx>=4.5.0",
]

# Entry points
[project.entry-points."invenio_base.apps"]
invenio_pidstore_extra = "invenio_pidstore_extra:InvenioUrnProvider"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_pidstore_extra"

[tool.pydocstyle]
add-ignore = ["D401", "D403"]

[tool.isort]
profile = "black"

[tool.check-manifest]
ignore = [
    "*-requirements.txt",
    "requirements-*.txt",
    ".editorconfig",
    ".dockerignore",
    ".tx/config",
]

[tool.hatch.build.targets.sdist]
include = [
    "*.in",
    "*.ini",
    "*.rst",
    "*.sh",
    "*.yml",
    "babel.ini",
    "invenio_pidstore_extra/**/*.py",
    "invenio_pidstore_extra/**/*.html",
    "tests/*.py",
]

[tool.pytest.ini_options]
addopts = """
--black --isort --doctest-glob='*.rst' --doctest-modules
--cov=invenio_pidstore_extra --cov-report term --cov-report xml:coverage.xml --junitxml=report.xml
"""
testpaths = ["tests", "invenio_pidstore_extra"]
env = """
    D:PIDSTORE_EXTRA_DNB_USERNAME="username"
    D:PIDSTORE_EXTRA_DNB_PASSWORD="password"
    D:PIDSTORE_EXTRA_DNB_ID_PREFIX="urn:nbn:dnb:provider:"
"""

[tool.babel]
copyright_holder = "University of Münster"
msgid_bugs_address = "forschungsdaten@uni-muenster.de"

[tool.babel.compile_catalog]
directory = "invenio_pidstore_extra/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
mapping_file = "babel.ini"
output_file = "invenio_pidstore_extra/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_pidstore_extra/translations/messages.pot"
output_dir = "invenio_pidstore_extra/translations/"

[tool.babel.update_catalog]
input_file = "invenio_pidstore_extra/translations/messages.pot"
output_dir = "invenio_pidstore_extra/translations/"

[tool.build_sphinx]
source-dir = "docs/"
build-dir = "docs/_build"
all_files = true
